--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- App Name -->
-    <string name="app_name">KiteMe</string>
+    <string name="app_name">Kite-me</string>
     
     <!-- Navigation -->
     <string name="nav_feed">Feed</string>
